--- a/package.json
+++ b/package.json
@@ -42,8 +42,10 @@
     "postcss": "^8.4.25",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
+    "react-data-table-component": "^7.6.2",
     "react-dom": "18.2.0",
     "react-obfuscate": "^3.6.8",
+    "react-router-dom": "^6.22.3",
     "sharp": "^0.31.3",
     "tailwindcss": "^3.2.7",
     "typescript": "4.9.5",
